chore(config): add specific path aliases to tsconfig.json
Summary of changes:
- Added explicit aliases for @/components, @/actions, @/agents, @/db, @/lib, and @/prompts
- Maintained the catch-all @/* alias for flexibility
- Why: To ensure stable and clean imports as the project architecture scales.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,13 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@/components/*": ["./src/components/*"],
+      "@/actions/*": ["./src/actions/*"],
+      "@/agents/*": ["./src/agents/*"],
+      "@/db/*": ["./src/db/*"],
+      "@/lib/*": ["./src/lib/*"],
+      "@/prompts/*": ["./src/prompts/*"]
     }
   },
   "include": [
