--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@neondatabase/serverless": "^1.0.2",
     "@vercel/blob": "^2.0.0",
     "drizzle-orm": "^0.45.1",
+    "duck-duck-scrape": "^2.2.7",
     "googleapis": "^169.0.0",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
