--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "googleapis": "^169.0.0",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
+    "next-themes": "^0.4.6",
     "openai": "^6.15.0",
     "pg": "^8.16.3",
     "react": "19.2.3",
